<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="16dp">
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="5"
            app:drawableStartCompat="@drawable/ic_star_yellow" />
        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="5"
            app:drawableStartCompat="@drawable/ic_date_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red_n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/casts"/>
            <TextView
                android:id="@+id/tv_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red_n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/genres" />
            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/red_n"
        android:text="@string/episodes" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/items_episodes"/>

</LinearLayout>