<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.detail.DetailActivity">
    <ImageView
        android:id="@+id/poster_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_arrow_back"
                tools:ignore="ContentDescription" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:src="@drawable/ic_favorite_border"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/bs_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/rounded_dialog"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                app:behavior_hideable = "false"
                app:behavior_peekHeight = "145dp"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/btn_handle_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_drag_handle_black"
                    tools:ignore="ContentDescription" />
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress"/>
                <androidx.core.widget.NestedScrollView
                    android:id="@+id/detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <include android:id="@+id/detail_movie" layout="@layout/content_detail_movie" />
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</RelativeLayout>