<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.musya.moviez.ui.movies.MoviesFragment">
    <LinearLayout
        android:id="@+id/bs_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_dialog"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable = "false"
        app:behavior_peekHeight = "240dp">
        <ImageView
            android:id="@+id/btn_handle_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_drag_handle_red"
            tools:ignore="ContentDescription" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_movies"
                >
            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>